style.css
/* ... */
/* Project Alternate Section */

.section__project__alt-bg {
    background-color: var(--clr-dark);
}

.section__project__alt {
    color: var(--clr-light);
}

.section__subtitle-project__alt {
    color: var(--clr-dark);
}

.tech-used-container { 
    padding: 1.5em 0; 

}

.tech-used-title {
    margin: 0;
    text-align: center;
    letter-spacing: 0.15em;
    text-transform: uppercase;
    font-size: 1.1rem;
    font-weight: 700;
}

.title-after::after {
    content: '';
    display: block;
    width: 5em;
    height: 1px;
    margin: 0.5em auto 1em;
    background-color: var(--clr-light);
    opacity: 0.25;
}

.title-after-reverse::after {
    background-color: var(--clr-dark);
}

.tech-used {
    display: flex;
    flex-flow: row wrap;
    justify-content: center;
    align-items: center;
}

.tech-button {
    background-color: var(--clr-light);
    border: 1px solid var(--clr-dark);
    border-radius: 0.75em;
    color: var(--clr-dark);
    padding: 6px 20px 8px;
    margin: 5px;
    transition: 0.5s;
    cursor: default;
}

.tech-button:hover {
    background-color: var(--clr-dark);
    border-color: var(--clr-light);
    color: var(--clr-light);
}

.btn-rev {
    background-color: var(--clr-dark);
    border-color: var(--clr-light);
    color: var(--clr-light);
}

.btn-rev:hover {
    background-color: var(--clr-light);
    border-color: var(--clr-dark);
    color: var(--clr-dark);
}

.icon {
    vertical-align: middle;
}

.tech-button-label {
    vertical-align: middle;
    margin-left: 0.5em;
}



@media (min-width: 600px) {
    .tech-used-container {
        margin-bottom: 1.5em;
    }

    .tech-used-title {
        text-align: left;
        margin-bottom: 0;
    }

    .tech-used-title::after {
        display: none;
    }

    .tech-used {
        margin-top: 0.25em;
        justify-content: flex-start;
    }

    /* .tech-button {
        padding: 6px 20px;
    } */

}


@media (hover: none) {
    .ach__cert:hover,
    .ach__teach:hover,
    .ach__award:hover {
        cursor: pointer;
    }

    .tech-button:hover {
        cursor: pointer;
    }

    .btn-rev:hover {
        cursor: pointer;
    }
}

